crates/es-fluent-derive/tests/ui/bad_optional_field.stderr
error[E0308]: mismatched types
 --> tests/ui/bad_optional_field.rs:8:5
  |
5 | #[derive(EsFluent)]
  |          -------- arguments to this function are incorrect
...
8 |     value: String,
  |     ^^^^^ expected `Option<_>`, found `&_`
  |
  = note:   expected enum `Option<_>`
          found reference `&_`
note: associated function defined here
 --> $WORKSPACE/crates/es-fluent/src/traits/fluent_message.rs
  |
  |     pub fn new(value: Option<T>) -> Self {
  |            ^^^
help: try wrapping the expression in `Some`
  |
8 |     Some(value): String,
  |     +++++     +
